# agner

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  agner  agner_main.py  pyproject.toml
driver/: .gitignore  DriverSrcLinux.txt  MSRDriver.h  MSRdrv.c  MSRdrv1.c  MSRdrvL.h  Makefile  install.sh  uninstall.sh
lib/: agner.py
src/: CPUDetection.cpp  CPUDetection.h  CounterDefinitions.cpp  Makefile  PMCTest.h  PMCTestA.cpp  PMCTestB64.nasm  PMCTestLinux.h  list_counters_main.cpp
src/agner/: agner.py  counters.py  main.py
src/driver/: .gitignore  MSRdrv.c  Makefile  install.sh
test/: .gitignore  MSRDriver32.sys  MSRDriver64.sys  MSRdrvL.h  Makefile  PMCTest.h  PMCTest.txt  PMCTestA.cpp  PMCTestB.cpp  PMCTestB32.asm  PMCTestB32.nasm  PMCTestB64.asm  PMCTestB64.nasm  PMCTestLinux.h  PMCTestWin.h  a.out  a32.sh  a64.sh  c32.sh  c64.sh  driver.py  intrin1.h  make_a_obj.bat  uninstall.cpp
tests/: branch.py  btb_size.py
tools/: update_counters.py
