[project]
name = "agner"
version = "0.1.0"
description = "A suite of tools for investigating the performance of x86 CPUs using Performance Monitor Counters"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.5.0",
]

[project.scripts]
agner = "agner.main:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "PLC", # pylint convention
]
ignore = [
    "E501",  # line too long (formatter handles this)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
